# TimelineForWindowsCodex

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DOCKER_ONLY_POLICY.md  README.ja.md  README.md  SETTINGS_POLICY.md  TODO.md  cli.bat  cli.command  cli.ps1  docker-compose.yml  settings.example.json  start.bat  start.command  start.ps1  stop.bat  stop.command  stop.ps1  test-operational.bat  test-operational.ps1  tfwc.ps1  timeline-product.json  uninstall.bat  uninstall.command  uninstall.ps1
.playwright-cli/: page-2026-04-24T17-10-32-722Z.yml  page-2026-04-24T17-11-05-987Z.yml
api/TimelineForWindowsCodex.HealthApi/: Program.cs
configs/: runtime.defaults.json
docker/: health.Dockerfile  web.Dockerfile  worker.Dockerfile
docs/: CLI.md  OUTPUTS.md  RUNTIME.md  TESTING.md  UPDATE_UI_INCREMENTAL_DESIGN.md
tests/smoke/: run_cli_ps1_download.py  run_docker_compose_refresh.py  run_fidelity_audit.py  run_production_like_refresh.py  run_web_smoke.py  run_windows_launcher_flow.py
web/: Program.cs  TimelineForWindowsCodex.Web.csproj  WindowsCodex2Timeline.Web.csproj
worker/: pyproject.toml
worker/src/timeline_for_windows_codex_worker/: __main__.py  api_server.py  api_services.py  cli.py  contracts.py  discovery.py  fs_utils.py  job_store.py  operations.py  parse_sessions.py  processor.py  settings.py  timeline.py
worker/src/windowscodex2timeline_worker/: cli.py  job_store.py  parse_sessions.py  processor.py  settings.py  timeline.py
worker/tests/: test_api_server.py  test_cli.py  test_commands.py  test_operations.py  test_worker_integration.py
(+34 files in other folders)
